--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
-    "cherry-markdown": "^0.8.49",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.452.0",
+    "marked": "^14.1.3",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -27,6 +27,7 @@
     "unsplash-js": "^7.0.19"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
