--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.452.0",
     "marked": "^14.1.3",
+    "marked-highlight": "^2.2.1",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
